# imlite

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/imlite/: exceptions.py
src/imlite/core/: __init__.py  image.py  pipeline.py  sequence.py  video.py
src/imlite/ops/: __init__.py  video_io.py
src/imlite/utils/: __init__.py  log.py  path.py
