[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imlite"
dynamic = ["version"]
description = "Lightweight Python library for image and video processing - one-liners for everyday CV workflows."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "ualiawan" }]
keywords = ["image", "video", "computer-vision", "opencv", "ffmpeg", "image-processing"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21",
    "opencv-python-headless>=4.5",
    "imageio>=2.28",
    "imageio-ffmpeg>=0.4.9",
    "tqdm>=4.60",
]

[project.optional-dependencies]
pillow = ["Pillow>=9.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.5",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/ualiawan/imlite"
Documentation = "https://imlite.readthedocs.io"
Repository = "https://github.com/ualiawan/imlite"
Issues = "https://github.com/ualiawan/imlite/issues"

# ---------------------------------------------------------------------------
# Hatchling - version from src/imlite/_version.py
# ---------------------------------------------------------------------------
[tool.hatch.version]
path = "src/imlite/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/imlite"]

# ---------------------------------------------------------------------------
# Ruff - linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long - handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["imlite"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy - type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cv2.*", "imageio.*", "tqdm.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/imlite"]
omit = ["src/imlite/_version.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
